# src/swagger/swagger-output.json
@@ -2,15 +2,31 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "My API",
-    "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
+    "title": "Pharmacellticos",
+    "description": "Squad2"
   },
   "host": "localhost:3333",
   "basePath": "/",
   "tags": [
     {
-      "name": "User",
-      "description": "Endpoints"
+      "name": "Usuários",
+      "description": "Endpoints de Usuários"
+    },
+    {
+      "name": "Vendas",
+      "description": "Endpoints de Vendas"
+    },
+    {
+      "name": "Carrinho",
+      "description": "Endpoints de Carrinho"
+    },
+    {
+      "name": "Pedidos",
+      "description": "Endpoints de Pedidos"
+    },
+    {
+      "name": "Produtos",
+      "description": "Endpoints de Produtos"
     }
   ],
   "schemes": [
@@ -44,6 +60,9 @@
     },
     "/api/usuario/login": {
       "post": {
+        "tags": [
+          "Usuários"
+        ],
         "description": "",
         "parameters": [
           {
@@ -77,6 +96,9 @@
     },
     "/api/usuario/cadastrar": {
       "post": {
+        "tags": [
+          "Usuários"
+        ],
         "description": "",
         "parameters": [
           {
@@ -155,6 +177,9 @@
     },
     "/api/usuario/admin/cadastro": {
       "post": {
+        "tags": [
+          "Usuários"
+        ],
         "description": "",
         "parameters": [
           {
@@ -255,6 +280,9 @@
     },
     "/api/criarVenda": {
       "post": {
+        "tags": [
+          "Vendas"
+        ],
         "description": "",
         "parameters": [
           {
@@ -312,6 +340,9 @@
     },
     "/api/listarVendas": {
       "get": {
+        "tags": [
+          "Vendas"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -322,6 +353,9 @@
     },
     "/api/listarVendaId/{id}": {
       "get": {
+        "tags": [
+          "Vendas"
+        ],
         "description": "",
         "parameters": [
           {
@@ -340,6 +374,9 @@
     },
     "/api/atualizarVendaId/{id}": {
       "patch": {
+        "tags": [
+          "Vendas"
+        ],
         "description": "",
         "parameters": [
           {
@@ -391,6 +428,9 @@
     },
     "/api/criarCarrinho": {
       "post": {
+        "tags": [
+          "Carrinho"
+        ],
         "description": "",
         "parameters": [
           {
@@ -427,6 +467,9 @@
     },
     "/api/listarCarrinhos": {
       "get": {
+        "tags": [
+          "Carrinho"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -437,6 +480,9 @@
     },
     "/api/listarCarrinhoId/{id}": {
       "get": {
+        "tags": [
+          "Carrinho"
+        ],
         "description": "",
         "parameters": [
           {
@@ -458,6 +504,9 @@
     },
     "/api/atualizarCarrinhoId/{id}": {
       "patch": {
+        "tags": [
+          "Carrinho"
+        ],
         "description": "",
         "parameters": [
           {
@@ -503,6 +552,9 @@
     },
     "/api/deletarCarrinhoId/{id}": {
       "delete": {
+        "tags": [
+          "Carrinho"
+        ],
         "description": "",
         "parameters": [
           {
@@ -524,6 +576,9 @@
     },
     "/api/criarPedido": {
       "post": {
+        "tags": [
+          "Pedidos"
+        ],
         "description": "",
         "parameters": [
           {
@@ -560,6 +615,9 @@
     },
     "/api/listarPedidos": {
       "get": {
+        "tags": [
+          "Pedidos"
+        ],
         "description": "",
         "responses": {
           "200": {
@@ -570,6 +628,9 @@
     },
     "/api/listarPedidoId/{id}": {
       "get": {
+        "tags": [
+          "Pedidos"
+        ],
         "description": "",
         "parameters": [
           {
@@ -591,6 +652,9 @@
     },
     "/api/deletarPedidoId/{id}": {
       "delete": {
+        "tags": [
+          "Pedidos"
+        ],
         "description": "",
         "parameters": [
           {
@@ -612,6 +676,9 @@
     },
     "/api/produtos/admin": {
       "post": {
+        "tags": [
+          "Produtos"
+        ],
         "description": "",
         "parameters": [
           {
@@ -677,6 +744,9 @@
     },
     "/api/produto/admin": {
       "get": {
+        "tags": [
+          "Produtos"
+        ],
         "description": "",
         "parameters": [
           {
@@ -716,6 +786,9 @@
     },
     "/api/produto/{offset}/{limit}": {
       "get": {
+        "tags": [
+          "Produtos"
+        ],
         "description": "",
         "parameters": [
           {
@@ -764,6 +837,9 @@
     },
     "/api/produto/{produtoId}": {
       "get": {
+        "tags": [
+          "Produtos"
+        ],
         "description": "",
         "parameters": [
           {
@@ -796,6 +872,9 @@
     },
     "/api/produto/admin/{produtoId}": {
       "patch": {
+        "tags": [
+          "Produtos"
+        ],
         "description": "",
         "parameters": [
           {
